--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-cookie": "^6.0.1",
     "react-dom": "^18.2.0",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-router": "^6.14.2",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
